fix: 데이터 허브 상세 조회 UI 수정

--- a/hyeonjeong/datahub/view.html
+++ b/hyeonjeong/datahub/view.html
@@ -56,18 +56,6 @@
             line-height: 1.2em;
             height: 2.4em;
         }
-
-        .ellipsis2 {
-            overflow: hidden;
-            text-overflow: ellipsis;
-            display: -webkit-box;
-            -webkit-line-clamp: 1;
-            -webkit-box-orient: vertical;
-            word-wrap: break-word;
-            line-height: 1.6em;
-            height: 2.6em;
-            width: 100%;
-        }
     </style>
 </head>
 
@@ -82,50 +70,56 @@
                 <!-- datahub-view-page-card-API-contents -->
                 <h4 class="mb-2">사용된 API</h4>
                 <div class="row mx-auto d-flex justify-content-between">
-                    <div class="card col-12 col-lg-3 border m-1">
-                        <div class="card-header fw-bold">API 제목sdfsdfsdffs 
-                            <a href=""><span class="badge bg-dark float-end m-1">자세히</span></a>
+                    <div class="card col-12 col-lg-3 border m-1 p-2">
+                        <a href="#" class="card-header">
+                            <span class="fw-bold fs-5">API 제목sdfsdd</span>
+                            <span class="badge bg-dark float-end m-1">상세보기</span>
+                        </a>
+                        <div class="card-body text-dark">
+                            <p class="card-text ellipsis">API 내용입니다 안녕하세요ㄴㅇㄹㄴㅇㄹㅇㄴㄹㅇㄹㄴㅇㄹㄴㅇㄹㄴㅇㄹ</p>
                         </div>
+                    </div>
+                    <div class="card col-12 col-lg-3 border m-1 p-2">
+                        <a href="#" class="card-header">
+                            <span class="fw-bold fs-5">API 제목sdfsdd</span>
+                            <span class="badge bg-dark float-end m-1">상세보기</span>
+                        </a>
                         <div class="card-body text-dark">
                             <p class="card-text ellipsis">API 내용sdfsdfsdfsdfsdfsdfsdfsdfsfsdfsdfsdf</p>
                         </div>
                     </div>
-                    <div class="card col-12 col-lg-3 border m-1">
-                        <div class="card-header fw-bold">API 제목
-                            <a href=""><span class="badge bg-dark float-end m-1">자세히</span></a>
-                        </div>
+                    <div class="card col-12 col-lg-3 border m-1 p-2">
+                        <a href="#" class="card-header">
+                            <span class="fw-bold fs-5">API 제목sdfsdd</span>
+                            <span class="badge bg-dark float-end m-1">상세보기</span>
+                        </a>
                         <div class="card-body text-dark">
                             <p class="card-text ellipsis">API 내용sdfsdfsdfsdfsdfsdfsdfsdfsfsdfsdfsdf</p>
                         </div>
                     </div>
-                    <div class="card col-12 col-lg-3 border m-1">
-                        <div class="card-header fw-bold">API 제목
-                            <a href=""><span class="badge bg-dark float-end m-1">자세히</span></a>
-                        </div>
+                    <div class="card col-12 col-lg-3 border m-1 p-2">
+                        <a href="#" class="card-header">
+                            <span class="fw-bold fs-5">API 제목sdfsdd</span>
+                            <span class="badge bg-dark float-end m-1">상세보기</span>
+                        </a>
                         <div class="card-body text-dark">
                             <p class="card-text ellipsis">API 내용sdfsdfsdfsdfsdfsdfsdfsdfsfsdfsdfsdf</p>
                         </div>
                     </div>
-                    <div class="card col-12 col-lg-3 border m-1">
-                        <div class="card-header fw-bold">API 제목
-                            <a href=""><span class="badge bg-dark float-end m-1">자세히</span></a>
-                        </div>
+                    <div class="card col-12 col-lg-3 border m-1 p-2">
+                        <a href="#" class="card-header">
+                            <span class="fw-bold fs-5">API 제목sdfsdd</span>
+                            <span class="badge bg-dark float-end m-1">상세보기</span>
+                        </a>
                         <div class="card-body text-dark">
                             <p class="card-text ellipsis">API 내용sdfsdfsdfsdfsdfsdfsdfsdfsfsdfsdfsdf</p>
                         </div>
                     </div>
-                    <div class="card col-12 col-lg-3 border m-1">
-                        <div class="card-header fw-bold">API 제목
-                            <a href=""><span class="badge bg-dark float-end m-1">자세히</span></a>
-                        </div>
-                        <div class="card-body text-dark">
-                            <p class="card-text ellipsis">API 내용sdfsdfsdfsdfsdfsdfsdfsdfsfsdfsdfsdf</p>
-                        </div>
-                    </div>
-                    <div class="card col-12 col-lg-3 border m-1">
-                        <div class="card-header fw-bold">API 제목
-                            <a href=""><span class="badge bg-dark float-end m-1">자세히</span></a>
-                        </div>
+                    <div class="card col-12 col-lg-3 border m-1 p-2">
+                        <a href="#" class="card-header">
+                            <span class="fw-bold fs-5">API 제목sdfsdd</span>
+                            <span class="badge bg-dark float-end m-1">상세보기</span>
+                        </a>
                         <div class="card-body text-dark">
                             <p class="card-text ellipsis">API 내용sdfsdfsdfsdfsdfsdfsdfsdfsfsdfsdfsdf</p>
                         </div>
@@ -133,69 +127,88 @@
                 </div>
             </div>
 
-            <!-- datahub-view-page-card-API-specialcard -->
-            <div class="col-12 mx-auto p-4">
+            <!-- datahub-view-page-card-API-special -->
+            <div class="col-12 col-lg-12 mx-auto mt-4 mb-4">
                 <h4 class="mb-2 mt-3">여기에서만 사용된 API</h4>
                 <div class="row mx-auto d-flex justify-content-between">
                     <div class="card col-12 col-lg-2 border border-dark m-1">
-                        <div class="card-header fw-bold">API 제목</div>
+                        <div class="card-header fw-bold fs-5">API 제목</div>
                         <div class="card-body text-dark">
-                            <p class="card-text ellipsis">API 내용sdfasdfsdfsdfsdfsdfsdfsdfsdfdfsdfsdfsdfsfsdfsdfsdfdfasdfsdfs</p>
+                            <p class="card-text ellipsis">API 내용입니다 안녕하세요ㄴㅇㄹㄴㄹㄴㅇㄹㄴㅇㄹㄴㅇ</p>
                         </div>
                     </div>
                     <div class="card col-12 col-lg-2 border border-dark m-1">
-                        <div class="card-header fw-bold">API 제목</div>
+                        <div class="card-header fw-bold fs-5">API 제목</div>
                         <div class="card-body text-dark">
-                            <p class="card-text ellipsis">API 내용sdfasdfsdfsdfsdfsdfsdfsdfsdfdfsdfsdfsdfsfsdfsdfsdfdfasdfsdfs</p>
+                            <p class="card-text ellipsis">API
+                                내용sdfasdfsdfsdfsdfsdfsdfsdfsdfdfsdfsdfsdfsfsdfsdfsdfdfasdfsdfs</p>
                         </div>
                     </div>
                     <div class="card col-12 col-lg-2 border border-dark m-1">
-                        <div class="card-header fw-bold">API 제목</div>
+                        <div class="card-header fw-bold fs-5">API 제목</div>
                         <div class="card-body text-dark">
-                            <p class="card-text ellipsis">API 내용sdfasdfsdfsdfsdfsdfsdfsdfsdfdfsdfsdfsdfsfsdfsdfsdfdfasdfsdfs</p>
+                            <p class="card-text ellipsis">API
+                                내용sdfasdfsdfsdfsdfsdfsdfsdfsdfdfsdfsdfsdfsfsdfsdfsdfdfasdfsdfs</p>
                         </div>
                     </div>
                     <div class="card col-12 col-lg-2 border border-dark m-1">
-                        <div class="card-header fw-bold">API 제목</div>
+                        <div class="card-header fw-bold fs-5">API 제목</div>
                         <div class="card-body text-dark">
-                            <p class="card-text ellipsis">API 내용sdfasdfsdfsdfsdfsdfsdfsdfsdfdfsdfsdfsdfsfsdfsdfsdfdfasdfsdfs</p>
+                            <p class="card-text ellipsis">API
+                                내용sdfasdfsdfsdfsdfsdfsdfsdfsdfdfsdfsdfsdfsfsdfsdfsdfdfasdfsdfs</p>
                         </div>
                     </div>
                     <div class="card col-12 col-lg-2 border border-dark m-1">
-                        <div class="card-header fw-bold">API 제목</div>
+                        <div class="card-header fw-bold fs-5">API 제목</div>
                         <div class="card-body text-dark">
-                            <p class="card-text ellipsis">API 내용sdfasdfsdfsdfsdfsdfsdfsdfsdfdfsdfsdfsdfsfsdfsdfsdfdfasdfsdfs</p>
+                            <p class="card-text ellipsis">API
+                                내용sdfasdfsdfsdfsdfsdfsdfsdfsdfdfsdfsdfsdfsfsdfsdfsdfdfasdfsdfs</p>
                         </div>
                     </div>
                 </div>
             </div>
 
+            <!-- datahub-view-page-card-dataset-contents -->
             <div class="col-12 col-lg-10 mx-auto">
-                <!-- datahub-view-page-card-dataset-contents -->
                 <h4 class="mb-2 mt-3">사용된 데이터셋</h4>
                 <div class="row mx-auto d-flex justify-content-between">
                     <div class="card col-12 col-lg-5 border mb-3 m-1">
                         <div class="card-body">
-                            <h5 class="card-title fw-bold">데이터셋 이름</h5>
-                            <p class="card-text ellipsis">데이터셋 내용sdfasdfsdfsdfsdfsdfsdfsdfsdfdfsdfsdfsdfsfsdfsdfsdfdfasdfsdfs</p>
+                            <a href="">
+                                <span class="card-title fw-bold fs-5">데이터셋 이름</span>
+                                <span class="badge bg-dark float-end m-1">상세보기</span></a>
+                            </a>
+                            <p class="card-text ellipsis">데이터셋 내용입니다 안녕하세요</p>
                         </div>
                     </div>
                     <div class="card col-12 col-lg-5 border mb-3 m-1">
                         <div class="card-body">
-                            <h5 class="card-title fw-bold">데이터셋 이름</h5>
-                            <p class="card-text ellipsis">데이터셋 내용sdfasdfsdfsdfsdfsdfsdfsdfsdfdfsdfsdfsdfsfsdfsdfsdfdfasdfsdfs</p>
+                            <a href="">
+                                <span class="card-title fw-bold fs-5">데이터셋 이름</span>
+                                <span class="badge bg-dark float-end m-1">상세보기</span></a>
+                            </a>
+                            <p class="card-text ellipsis">데이터셋
+                                내용sdfasdfsdfsdfsdfsdfsdfsdfsdfdfsdfsdfsdfsfsdfsdfsdfdfasdfsdfs</p>
                         </div>
                     </div>
                     <div class="card col-12 col-lg-5 border mb-3 m-1">
                         <div class="card-body">
-                            <h5 class="card-title fw-bold">데이터셋 이름</h5>
-                            <p class="card-text ellipsis">데이터셋 내용sdfasdfsdfsdfsdfsdfsdfsdfsdfdfsdfsdfsdfsfsdfsdfsdfdfasdfsdfs</p>
+                            <a href="">
+                                <span class="card-title fw-bold fs-5">데이터셋 이름</span>
+                                <span class="badge bg-dark float-end m-1">상세보기</span></a>
+                            </a>
+                            <p class="card-text ellipsis">데이터셋
+                                내용sdfasdfsdfsdfsdfsdfsdfsdfsdfdfsdfsdfsdfsfsdfsdfsdfdfasdfsdfs</p>
                         </div>
                     </div>
                     <div class="card col-12 col-lg-5 border mb-3 m-1">
                         <div class="card-body">
-                            <h5 class="card-title fw-bold">데이터셋 이름</h5>
-                            <p class="card-text ellipsis">데이터셋 내용sdfasdfsdfsdfsdfsdfsdfsdfsdfdfsdfsdfsdfsfsdfsdfsdfdfasdfsdfs</p>
+                            <a href="">
+                                <span class="card-title fw-bold fs-5">데이터셋 이름</span>
+                                <span class="badge bg-dark float-end m-1">상세보기</span></a>
+                            </a>
+                            <p class="card-text ellipsis">데이터셋
+                                내용sdfasdfsdfsdfsdfsdfsdfsdfsdfdfsdfsdfsdfsfsdfsdfsdfdfasdfsdfs</p>
                         </div>
                     </div>
                 </div>
@@ -205,10 +218,3 @@
 </body>
 
 </html>
-<!--글씨 쓰기 필요없음 
-                api나 데이터셋 목록
-                그리드, 배너로
-                리스트형식으로 하지말기
-                데이터 허브를 누가 등록? 사용자? 관리자?
-            데이터 허브 메인에서 마음에 드는 데이터 허브 하나를 클릭했을 때 그 데이터 허브 관련된 API나 데이터셋을 보여주는 페이지
-            데이터 허브에서만 공개된 API가 있는데 이 페이지에서 그 공개된 API가 나와야 함-->
