데이터허브 리스트 수정

--- a/BU/test/datahub/main.html
+++ b/BU/test/datahub/main.html
@@ -38,14 +38,16 @@
     <div class="container">
         <div class="row">
             <div class="col-12">
-                <div class="input-group flex-nowrap mt-3">
+                <p class="fs-2">데이터 허브</p>
+                <div class="input-group flex-nowrap mt-3 mb-5">
                     <input type="text" class="form-control" placeholder="검색">
                     <button type="button" class="btn btn-primary"><i class="fas fa-search"></i></button>
                 </div>
-                <div class="row row-cols-1 row-cols-md-4 g-4 mt-2">
+                <p class="fs-3 mt-5">ISSUE</p>
+                <div class="row row-cols-1 row-cols-md-4 g-4">
                     <div class="col">
                         <div class="card h-100">
-                            <img src="../image/data_4.PNG" class="card-img-top mx-auto mt-3" alt="..."
+                            <img src="../../image/data_4.PNG" class="card-img-top mx-auto mt-3" alt="..."
                                 style="width: 150px; height: 150px; border-radius: 70%">
                             <div class="card-body">
                                 <h5 class="card-title text-center"><a href="#">Card title</a></h5>
@@ -57,7 +59,7 @@
                     </div>
                     <div class="col">
                         <div class="card h-100">
-                            <img src="../image/data_5.PNG" class="card-img-top mx-auto mt-3" alt="..."
+                            <img src="../../image/data_5.PNG" class="card-img-top mx-auto mt-3" alt="..."
                                 style="width: 150px; height: 150px; border-radius: 70%">
                             <div class="card-body">
                                 <h5 class="card-title text-center"><a href="#">Card title</a></h5>
@@ -67,7 +69,7 @@
                     </div>
                     <div class="col">
                         <div class="card h-100">
-                            <img src="../image/data_6.PNG" class="card-img-top mx-auto mt-3" alt="..."
+                            <img src="../../image/data_6.PNG" class="card-img-top mx-auto mt-3" alt="..."
                                 style="width: 150px; height: 150px; border-radius: 70%">
                             <div class="card-body">
                                 <h5 class="card-title text-center"><a href="#">Card title</a></h5>
@@ -79,7 +81,7 @@
                     </div>
                     <div class="col">
                         <div class="card h-100">
-                            <img src="../image/data_7.PNG" class="card-img-top mx-auto mt-3" alt="..."
+                            <img src="../../image/data_7.PNG" class="card-img-top mx-auto mt-3" alt="..."
                                 style="width: 150px; height: 150px; border-radius: 70%">
                             <div class="card-body">
                                 <h5 class="card-title text-center"><a href="#">Card title</a></h5>
@@ -95,16 +97,16 @@
                         <div class="nav nav-tabs" id="nav-tab" role="tablist">
                             <button class="nav-link active" id="nav-home-tab" data-bs-toggle="tab"
                                 data-bs-target="#nav-home" type="button" role="tab" aria-controls="nav-home"
-                                aria-selected="true">Home</button>
+                                aria-selected="true">교육</button>
                             <button class="nav-link" id="nav-profile-tab" data-bs-toggle="tab"
                                 data-bs-target="#nav-profile" type="button" role="tab" aria-controls="nav-profile"
-                                aria-selected="false">Profile</button>
+                                aria-selected="false">의료</button>
                             <button class="nav-link" id="nav-contact-tab" data-bs-toggle="tab"
                                 data-bs-target="#nav-contact" type="button" role="tab" aria-controls="nav-contact"
-                                aria-selected="false">Contact</button>
+                                aria-selected="false">산업</button>
                         </div>
                     </nav>
-                    <div class="tab-content row" id="nav-tabContent" data-masonry='{"percentPosition": true }'>
+                    <div class="tab-content" id="nav-tabContent">
                         <div class="tab-pane fade show active" id="nav-home" role="tabpanel"
                             aria-labelledby="nav-home-tab">
                             <div class="row row-cols-1 row-cols-md-4 g-4 mt-2" data-masonry='{"percentPosition": true }'>
@@ -154,8 +156,6 @@
                                         </div>
                                     </div>
                                 </div>
-                            <!-- </div>
-                            <div class="row row-cols-1 row-cols-md-4 g-4 mt-2"> -->
                                 <div class="col">
                                     <div class="card">
                                         <img src="../../image/data_4.PNG" class="card-img-top mx-auto mt-3" alt="..."
@@ -204,9 +204,9 @@
                             </div>
                         </div>
                         <div class="tab-pane fade" id="nav-profile" role="tabpanel" aria-labelledby="nav-profile-tab">
-                            ...</div>
+                            의료</div>
                         <div class="tab-pane fade" id="nav-contact" role="tabpanel" aria-labelledby="nav-contact-tab">
-                            ...</div>
+                            산업</div>
                     </div>
                 </div>
             </div>
